--- a/config.env
+++ b/config.env
@@ -1,4 +1,4 @@
 PORT=5000
 NODE_ENV=development
 TRACKER_API_URL=https://public-api.tracker.gg/v2/apex/standard
-TRACKER_API_KEY=ef4c9d80-b09a-4ef1-bf85-19cebc143609
+TRACKER_API_KEY=KEY
